base/production/docs/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
spec:
  replicas: 2
  template:
    spec:
      nodeSelector:
        agentpool: prodpoolv1
      tolerations:
        - key: workload
          operator: Equal
          value: production
          effect: NoSchedule
