base/production/docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: production
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
        version: "N/A" # replaced from kustomization.yaml
    spec:
      nodeSelector:
        agentpool: prodpoolv1
      tolerations:
        - key: workload
          operator: Equal
          value: production
          effect: NoSchedule
      containers:
        - name: docs
          image: patinanetwork/docs-arm
          ports:
            - name: http-web
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http-web
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http-web
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "8Mi"
              cpu: "5m"
            limits:
              memory: "32Mi"
              cpu: "50m"
