base/production/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: production
spec:
  selector:
    app: docs
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: http-web
