base/production/docs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`docs.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: docs
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: docs-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.patinanetwork.org`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: azure-oidc
        - name: basic-rate-limit
      services:
        - name: docs
          port: 80
  tls:
    secretName: production-docs-tls
